problem statement.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   </head>
   <body>
     <h1>Connor Yazdi</h1>
-    <h2>custom text</h2>
+    <section class="assign">
+      <img src=C:\Users\kingr\OneDrive\Pictures\problemstatement.png />
+      <section class="assign det">
+        <h2>Problem Statement: Work Submission Confusion</h2>
+        <p>
+          Students are busy and managing time is important. This is not
+          helped by the fact that different professors may use completely 
+          different systems for managing classwork and homework. It is 
+          confusing when homework for one class is submitted by email while
+          another is submitted on Blackboard and another on dropbox.
+        </p>
+      </section>
+    </section>
   </body>
 </html>
