--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <section class="assign">
       <img src=images/problem statement.png />
       <section class="assign det">
-        <h2>Problem Statement: Work Submission Confusion</h2>
+        <h2>Problem Statement: Confusion Management</h2>
         <p>
           Students are busy and managing time is important. This is not
           helped by the fact that different professors may use completely 
