--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Connor Yazdi</h1>
     <section class="assign">
-      <img src=images/problem statement.png />
+      <img src="images/problem-statement.png" />
       <section class="assign det">
         <h2>Problem Statement: Confusion Management</h2>
         <p>
