--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="assign">
       <img src="images/affinity-board-image.png" />
       <section class="assign-det">
-        <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Brainstorming Time</h2></a>
+        <a href="files/affinity-board.pdf"><h2>Affinity Diagram: Brainstorming Time</h2></a>
         <p>
           In this affinity diagram the group laid out our various thoughts about solving our problem. Our main idea is a web-app that could handle all the tasks we throw at it, so we thought up all most important features along with challenges and potential problems. The biggest problems we identified were reliability and implementation. The biggest benefit is ease of use, which is the main focus. 
         </p>
