--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <Title>CSCE 190: Connor Yazdi</Title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Connor Yazdi</h1>
     <section class="assign">
       <img src="images/problem-statement.png" />
-      <section class="assign det">
+      <section class="assign-det">
         <h2>Problem Statement: Busy Schedule with Confusion</h2>
         <p>
           Students are busy and managing time is important. This is not
@@ -25,6 +26,16 @@
         <a href="files/affinity-board.pdf"><h2>Affinity Diagram: Brainstorming Time</h2></a>
         <p>
           In this affinity diagram the group laid out our various thoughts about solving our problem. Our main idea is a web-app that could handle all the tasks we throw at it, so we thought up all most important features along with challenges and potential problems. The biggest problems we identified were reliability and implementation. The biggest benefit is ease of use, which is the main focus. 
+        </p>
+      </section>
+    </section>
+    <!-- Personas assignment -->
+    <section class="assign">
+      <img src="images/my-persona.jpg" />
+      <section class="assign-det">
+        <a href="files/all-personas.pdf"><h2>Team Personas: It's all coming together now</h2></a>
+        <p>
+          Chad is an absolute baller, but he isn't too sharp when it comes to technology. 
         </p>
       </section>
     </section>
