--- a/index.html
+++ b/index.html
@@ -39,5 +39,15 @@
         </p>
       </section>
     </section>
+    <!-- Storyboard assignment -->
+    <section class="assign">
+      <img src="images/my-storyboard.jpg" />
+      <section class="assign-det">
+        <a href="files/all-storyboards.pdf"><h2>Team Storyboards: Wild and Wacky Adventures</h2></a>
+        <p>
+          Chad uses the app to check grades, emails, and upcoming assignments.
+        </p>
+      </section>
+    </section>
   </body>
 </html>
