--- a/index.html
+++ b/index.html
@@ -49,5 +49,15 @@
         </p>
       </section>
     </section>
+    <!-- Sketching Assignment-->
+    <section class="assign">
+      <image src="images/my-sketch.jpg" />
+      <section class="assign-det">
+        <a href="files/all-sketches.pdf"><h2>Team Sketches: Brainstorming Time</h2></a>
+        <p>
+          The team begins forming the first ideas for a prototype design of our awesome app.
+        </p>
+      </section>
+    </section>
   </body>
 </html>
