--- a/index.html
+++ b/index.html
@@ -59,5 +59,15 @@
         </p>
       </section>
     </section>
+    <!-- Paper Prototype Assignment -->
+    <section class="assign">
+      <img src="images/team-prototype.png" />
+      <section class="assign-det">
+        <a href="https://youtube.com/shorts/EC1jTtnEYXg?si=9MjQ549O-IlXCK8-"><h2>Team Paper Prototype: The Beginning of Something Great</h2></a>
+        <p>
+          The team drafted a prototype based on our ideas from sketching and our comic strips. Our design is still subject to change at this point, and we're looking to improve it further.
+        </p>
+      </section>
+    </section>
   </body>
 </html>
