--- a/index.html
+++ b/index.html
@@ -69,5 +69,15 @@
         </p>
       </section>
     </section>
+    <!-- Hi-Fi prototype assignment -->
+    <section class="assign">
+      <img src="images/team-hifi.png" />
+      <section class="assign-det">
+        <a href="https://youtu.be/g01WgNsXQQQ"><h2>Team Hi-Fi Prototype: Putting it all Together</h2></a>
+        <p>
+          The team put together our ideas to make a visual demo of what our app will look like. It was a lot of working leading up to this point, so we hope our hard work will satisfy the target audience.
+        </p>
+      </section>
+    </section>
   </body>
 </html>
